--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -10,7 +10,7 @@
 @media (min-width: 1500px) {
     .banner {
         position: relative;
-        height: 600px;
+        height: 610px;
     }
 
     .fade_bottom {
@@ -20,13 +20,13 @@
         left: 0;
         /* 위치가 안 맞아서 직접 추가 */
         width: 100%;
-        height: 40rem;
+        height: 30rem;
     }
 }
 
 @media (max-width: 768px) {
     .banner_contents {
-        width: min-content !important;
+        width: min-content !important; /* 요소의 너비를 최소로 줄이는데 최소 크기는 컨텐츠 크기 */
         padding-left: 2.3rem;
         margin-left: 0px !important;
     }
@@ -50,7 +50,7 @@
         border-radius: 4px !important;
     }
 }
-/* 영화 제목, 버튼, 설명을 담고있는 컨테이너 */
+/* 영화 제목, 버튼, 설명을 담고있는 컨테이너(이미지 제외한 모든 것) */
 .banner_contents {
     margin-left: 40px;
     padding-top: 140px;
@@ -85,11 +85,11 @@
     flex-direction: row;
 }
 
-.banner_button {
+.banner_button_play {
     display: flex;
     justify-content: start;
     align-items: center;
-    cursor: pointer;
+    cursor: pointer; /* 가져다대면 포인터 바뀜 */
     outline: none;
     border: none;
     font-size: 1rem;
@@ -98,7 +98,7 @@
     margin-right: 1rem;
 }
 /* 버튼에 호버 시 보여줄 css */
-.banner_button:hover {
+.banner_button_play:hover {
     color: #000;
     background-color: rgba(170, 170, 170, 0.9);
     transition: all 0.2s;
